adding docker to frontend and backend adding ngnix also